--- a/css/theme.css
+++ b/css/theme.css
@@ -6,10 +6,10 @@ body {
   overflow-x: hidden; }
 
 body {
-  background: #fff;
+  background: #ffffff;
   font-family: "Roboto";
   font-size: 14px;
-  color: #000;
+  color: #000000;
   margin: 0;
   padding: 0; }
 
@@ -95,7 +95,7 @@ h3 {
     margin: 0 auto; } }
 
 header {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   box-shadow: inset 0 -1px 0 0 rgba(215, 215, 215, 0.5); }
 
 .navbar {
@@ -235,7 +235,7 @@ header {
       .navbar .navbar-collapse .inner-col2 .extra .bell-ac:before {
         content: "AC";
         opacity: 0.97;
-        color: #FFFFFF;
+        color: #ffffff;
         font-family: "Roboto";
         font-size: 16px;
         font-weight: 900;
@@ -330,7 +330,7 @@ header {
           width: 91.18%;
           height: 552px; } }
     .banner-slider .mySwiper2 .swiper-button-prev, .banner-slider .mySwiper2 .swiper-button-next {
-      border: 2px solid #FFFFFF;
+      border: 2px solid #ffffff;
       border-radius: 100%;
       height: 37px;
       width: 37px; }
@@ -650,7 +650,7 @@ header {
 .blocks .book-form {
   padding: 14px 24px 27px 24px;
   border-radius: 2px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.04), 0 1px 45px 0 rgba(0, 0, 0, 0.08);
   position: relative;
   margin-bottom: 25px;
@@ -743,7 +743,7 @@ header {
     line-height: 16px;
     margin-bottom: 29px; }
   .blocks .book-form button {
-    color: #FFFFFF;
+    color: #ffffff;
     font-family: Roboto;
     font-size: 14px;
     font-weight: 500;
@@ -769,7 +769,7 @@ header {
   padding: 27px 24px 21px 56px;
   border: 1px solid #E6E6E6;
   border-radius: 2px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.04), 0 1px 45px 0 rgba(0, 0, 0, 0.08);
   margin-bottom: 25px; }
   @media (min-width: 992px) {
@@ -1040,7 +1040,8 @@ header {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 3px;
     padding: 12px 16px;
-    display: inline-block; }
+    display: inline-block;
+    color: #2B2B2B; }
   .footer .col5 .inner {
     max-width: 150px; }
   .footer .col5 a {
