--- a/css/theme.scss
+++ b/css/theme.scss
@@ -12,17 +12,17 @@ $effra:'Effra';
 //color var
 $dark: #1D1D1D;
 $red: #E6474D;
-$black: #000;
-$white: #fff;
+$black: #000000;
+$white: #ffffff;
 $review_date: #8C9399;
 $review: #212121;
 $footer_color: #7C7C7C;
 
 body {
-  background: #fff;
+  background: $white;
   font-family: $roboto;
   font-size: 14px;
-  color: #000;
+  color: $black;
   margin: 0;
   padding: 0;
 }
@@ -42,7 +42,7 @@ h3{
 }
 
 .comm-header{
-  color: #000000;
+  color: $black;
   // font-family: Effra;
   font-size: 25px;
   font-weight: 900;
@@ -54,7 +54,7 @@ h3{
 }
 
 .comm-description{
-  color: #1D1D1D;
+  color: $dark;
   // font-family: Roboto;
   font-size: 16px;
   letter-spacing: 0;
@@ -107,7 +107,7 @@ h3{
 }
 
 .comm-btn{
-  color: #E6474D;
+  color: $red;
   font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
@@ -129,7 +129,7 @@ h3{
 
 // nav css
 header{
-  background-color: #FFFFFF;
+  background-color: $white;
   box-shadow: inset 0 -1px 0 0 rgba(215,215,215,0.5);
 }
 .navbar{
@@ -291,7 +291,7 @@ header{
           &:before{
             content:"AC";
             opacity: 0.97;
-            color: #FFFFFF;
+            color: $white;
             font-family: $roboto;
             font-size: 16px;
             font-weight: 900;
@@ -417,7 +417,7 @@ header{
         }
     }
     .swiper-button-prev, .swiper-button-next{
-        border: 2px solid #FFFFFF;
+        border: 2px solid $white;
       border-radius: 100%;
       height: 37px;
       width: 37px;
@@ -665,7 +665,7 @@ header{
           }
         }
         .more{
-          color: #E6474D;
+          color: $red;
           font-family: Roboto;
           font-size: 14px;
           font-weight: 500;
@@ -704,7 +704,7 @@ header{
         }
       } 
       .rating{
-        color: #1D1D1D;
+        color: $dark;
         // font-family: Roboto;
         font-size: 24px;
         font-weight: bold;
@@ -713,7 +713,7 @@ header{
         text-align: right;
         .rate{
           span{
-            color: #1D1D1D;
+            color: $dark;
             // font-family: Roboto;
             font-size: 24px;
             font-weight: bold;
@@ -732,7 +732,7 @@ header{
         align-items:center;
       }
       .review-text{
-        color: #1D1D1D;
+        color: $dark;
         font-size: 14px;
         font-weight: 700;
         letter-spacing: 0;
@@ -771,7 +771,7 @@ header{
               margin-left: 12px;
               margin-top:6px;
               .name{
-                color: #000000;
+                color: $black;
                 // font-family: Effra;
                 font-size: 16px;
                 font-weight: 500;
@@ -780,7 +780,7 @@ header{
                 margin-bottom: 3px;
               }
               .date{
-                color: #8C9399;
+                color: $review_date;
                 // font-family: Roboto;
                 font-size: 14px;
                 letter-spacing: 0;
@@ -800,7 +800,7 @@ header{
             }
           }
           .col2{
-            color: #000000;
+            color: $black;
             font-family: Roboto;
             font-size: 16px;
             font-weight: 500;
@@ -823,7 +823,7 @@ header{
         }
         .description{
           margin-top:9px;
-          color: #212121;
+          color: $review;
           // font-family: Roboto;
           font-size: 14px;
           letter-spacing: 0;
@@ -838,7 +838,7 @@ header{
   .book-form{
     padding:14px 24px 27px 24px;
     border-radius: 2px;
-    background-color: #FFFFFF;
+    background-color: $white;
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.04), 0 1px 45px 0 rgba(0,0,0,0.08);
     position: relative;
     margin-bottom: 25px;
@@ -850,7 +850,7 @@ header{
     .header{
     }
     p{
-      color: #000000;
+      color: $black;
       font-size: 16px;
       letter-spacing: 0;
       line-height: 19px;
@@ -899,7 +899,7 @@ header{
         border:none;
         margin-bottom: 16px;
         height: 48px;
-        color: #000000;
+        color: $black;
         font-family: Roboto;
         font-size: 15px;
         letter-spacing: 0;
@@ -933,14 +933,14 @@ header{
       align-items: flex-end;
       border-bottom: 1px solid #E6E6E6;
       .days{
-        color: #000000;
+        color: $black;
         font-size: 16px;
         font-weight: 500;
         letter-spacing: -0.36px;
         line-height: 19px;
       }
       .price{
-        color: #000000;
+        color: $black;
         font-size: 24px;
         font-weight: bold;
         letter-spacing: 0;
@@ -949,14 +949,14 @@ header{
     }
     .tag{
       opacity: 0.7;
-      color: #000000;
+      color: $black;
       font-size: 14px;
       letter-spacing: 0;
       line-height: 16px;
       margin-bottom: 29px;
     }
     button{
-      color: #FFFFFF;
+      color: $white;
       font-family: Roboto;
       font-size: 14px;
       font-weight: 500;
@@ -985,7 +985,7 @@ header{
     padding:27px 24px 21px 56px;
     border: 1px solid #E6E6E6;
     border-radius: 2px;
-    background-color: #FFFFFF;
+    background-color: $white;
     box-shadow: 0 6px 12px 0 rgba(0,0,0,0.04), 0 1px 45px 0 rgba(0,0,0,0.08);
     margin-bottom: 25px;
     @media(min-width:992px){
@@ -1004,7 +1004,7 @@ header{
 
       }
       .description{
-        color: #000000;
+        color: $black;
         font-family: Roboto;
         font-size: 14px;
         font-weight: 500;
@@ -1019,7 +1019,7 @@ header{
       }
       >p:nth-child(1){
         opacity: 0.7;
-        color: #000000;
+        color: $black;
         font-family: Roboto;
         font-size: 14px;
         letter-spacing: 0;
@@ -1027,7 +1027,7 @@ header{
         margin-bottom: 6px;
       }
       >p:nth-last-child(1){
-        color: #E6474D;
+        color: $red;
         font-family: Roboto;
         font-size: 14px;
         font-weight: 500;
@@ -1043,7 +1043,7 @@ header{
     display: flex;
     margin-bottom: 29px;
     p{
-      color: #000000;
+      color: $black;
       font-family: Roboto;
       font-size: 11px;
       font-weight: bold;
@@ -1101,7 +1101,7 @@ header{
     li{
       position:relative;
       padding-left:26px;
-      color: #212121;
+      color: $review;
       font-size: 16px;
       letter-spacing: 0;
       line-height: 28px;
@@ -1152,7 +1152,7 @@ header{
       margin-bottom: 57px;
     }
     .address-block{
-      color: #1D1D1D;
+      color: $dark;
       font-family: Roboto;
       font-size: 14px;
       letter-spacing: 0;
@@ -1208,7 +1208,7 @@ header{
         .info{
           margin-top:9px;
           .apartment-descirption{
-             color: #000000;
+             color: $black;
             // font-family: Effra;
             font-size: 16px;
             font-weight: 500;
@@ -1237,7 +1237,7 @@ header{
               }
             } 
             .review{
-              color: #000000;
+              color:$black;
               font-family: Roboto;
               font-size: 10px;
               font-weight: bold;
@@ -1256,7 +1256,7 @@ header{
   .explore{
     margin-top:20px;
     span{
-      color: #8C9399;
+      color: $review_date;
       font-size: 14px;
     }
   }
@@ -1274,7 +1274,7 @@ header{
   padding-top:33px;
   .inner{
     .header{
-      color: #000000;
+      color: $black;
       // font-family: Effra;
       font-size: 14px;
       font-weight: 500;
@@ -1283,7 +1283,7 @@ header{
       margin-bottom: 4px;
     }
     ul li, .text a, a{
-      color: #7C7C7C;
+      color: $footer_color;
       font-family: Roboto;
       font-size: 14px;
       letter-spacing: 0;
@@ -1309,7 +1309,7 @@ header{
         }
         .text{
            opacity: 0.3;
-          color: #000000;
+          color: $black;
           font-size: 18px;
           font-weight: 500;
           letter-spacing: 0;
@@ -1343,6 +1343,7 @@ header{
         border-radius: 3px;
         padding:12px 16px;
         display: inline-block;
+        color: #2B2B2B;
       }
     }
     .col5{
@@ -1351,13 +1352,13 @@ header{
       }
       a{
         display: inline-block;
-        color:#E6474D;
+        color:$red;
       }
     }
     .col6{
       a{
         line-height: 20px;
-        color:#E6474D;
+        color:$red;
       }
     }
     .col3{
@@ -1383,7 +1384,7 @@ header{
     margin-top:32px;
     a{
       margin-left: 102px;
-      color: #E6474D;
+      color: $red;
     }
   }
 }
