--- a/css/theme.css
+++ b/css/theme.css
@@ -1040,7 +1040,12 @@ header {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 3px;
     padding: 12px 16px;
-    display: inline-block; }
+    display: inline-block;
+    font-size: 12px; }
+    @media (min-width: 1200px) {
+      .footer .col4 a {
+        padding: 12px 16px;
+        font-size: 14px; } }
   .footer .col5 .inner {
     max-width: 150px; }
   .footer .col5 a {
