--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1343,6 +1343,11 @@ header{
         border-radius: 3px;
         padding:12px 16px;
         display: inline-block;
+        font-size: 12px;
+        @media(min-width:1200px){
+          padding:12px 16px;
+          font-size: 14px;
+        }
       }
     }
     .col5{
