--- a/css/theme.css
+++ b/css/theme.css
@@ -1041,7 +1041,8 @@ header {
     border-radius: 3px;
     padding: 12px 16px;
     display: inline-block;
-    font-size: 12px; }
+    font-size: 12px;
+    font-weight: 500; }
     @media (min-width: 992px) {
       .footer .col4 a {
         padding: 12px 16px;
