--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1344,6 +1344,7 @@ header{
         padding:12px 16px;
         display: inline-block;
         font-size: 12px;
+        font-weight: 500;
         @media(min-width:992px){
           padding:12px 16px;
           font-size: 14px;
