--- a/css/theme.css
+++ b/css/theme.css
@@ -1042,7 +1042,8 @@ header {
     padding: 12px 16px;
     display: inline-block;
     font-size: 12px;
-    font-weight: 500; }
+    font-weight: 500;
+    color: #2B2B2B; }
     @media (min-width: 992px) {
       .footer .col4 a {
         padding: 12px 16px;
