--- a/css/theme.scss
+++ b/css/theme.scss
@@ -1345,6 +1345,7 @@ header{
         display: inline-block;
         font-size: 12px;
         font-weight: 500;
+        color:#2B2B2B;
         @media(min-width:992px){
           padding:12px 16px;
           font-size: 14px;
